[build-system]
requires = [
  "setuptools >= 61.0",
  "setuptools_scm[toml] >= 8",
]
build-backend = "setuptools.build_meta"

[project]
name = "NREL-nsrdb"
dynamic = ["version"]
description = "National Solar Radiation Database (NSRDB) Software"
keywords = ["nsrdb", "NREL"]
readme = "README.rst"
authors = [
  {name = "Brandon Benton", email = "brandon.benton@nrel.gov"},
]
license = {text = "BSD-3-Clause"}
requires-python = ">= 3.8"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "netCDF4>=1.6,<1.7",
  "matplotlib>=3.1",
  "NREL-gaps>=0.6.0",
  "NREL-cloud_fs>=0.0.8",
  "NREL-farms>=1.0.5",
  "scikit-learn>=1.0",
  "NREL-rest2>=1.0.2",
  "NREL-mlclouds>=0.0.1",
]

[project.optional-dependencies]
dev = [
  "build>=0.5",
  "pre-commit",
  "ruff>=0.5.0"
]
doc = [
  "sphinx>=7.0",
  "sphinx_rtd_theme>=2.0",
  "sphinx-click>=4.0",
]
test = [
  "pytest>=5.2",
  "pytest-env>=1.1.3",
  "pytest-cov>=5.0.0"
]

[project.urls]
homepage = "https://github.com/NREL/nsrdb"
documentation = "https://nrel.github.io/nsrdb/"
repository = "https://github.com/NREL/nsrdb"

[tool.ruff]
line-length = 79
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
  ignore = [
    "B008", # function-call-in-default-argument
    "B024", # abstract-base-class-without-abstract-method
    "B028", # no-explicit-stacklevel
    "B905", # zip-without-explicit-strict
    "D105", # undocumented-magic-method
    "D202", # no-blank-line-after-function
    "D205", # blank-line-after-summary
    "D209", # new-line-after-last-paragraph
    "D212", # multi-line-summary-first-line
    "D213", # multi-line-summary-second-linek
    "D400", # ends-in-period
    "D401", # non-imperative-mood
    "E402", # module level import not at top of file
    "D413", # blank-line-after-last-section
    "D415", # ends-in-punctuation
    "E902", # io-error
    "PLR0913", # too-many-arguments
    "UP009", # utf8-encoding-declaration
    "UP032", # f-string
    "UP038" # non-pep604-isinstance
  ]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports

[tool.ruff.lint.pylint]
max-args = 5 # (PLR0913) Maximum number of arguments for function / method
max-bool-expr = 5 # ( PLR0916) Boolean in a single if statement
max-branches=12 # (PLR0912) branches allowed for a function or method body
max-locals=15 # (PLR0912) local variables allowed for a function or method body
max-nested-blocks = 5 # (PLR1702) nested blocks within a function or method body
max-public-methods=20 # (R0904) public methods allowed for a class
max-returns=6 # (PLR0911) return statements for a function or method body
max-statements=50 # (PLR0915) statements allowed for a function or method body

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
# Consider adopting "lf" instead
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
include-package-data = true
packages = ["nsrdb"]

[tool.setuptools_scm]
version_file = "nsrdb/_version.py"

[tool.pytest_env]
CUDA_VISIBLE_DEVICES = "-1"
TF_ENABLE_ONEDNN_OPTS = "0"